# syncedlyrics

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  test.py  tests.py
.github/: tests.yml
.github/workflows/: pypi-publish.yml  tests.yml
syncedlyrics/: __init__.py  __main__.py  cli.py  requirements.txt  utils.py
syncedlyrics/providers/: __init__.py  base.py  deezer.py  genius.py  lrclib.py  lyricsify.py  megalobiz.py  musixmatch.py  netease.py  spotify.py
