[tool.poetry]
name = "syncedlyrics"
version = "0.2.1"
description = "Get an LRC format (synchronized) lyrics for your music"
authors = ["Momo <lo3me@proton.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
rapidfuzz = "^2.13.2"

[tool.poetry.scripts]
syncedlyrics = "syncedlyrics.cli:cli_handler"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
