[tool.poetry]
name = "syncedlyrics"
version = "0.8.0"
description = "Get an LRC format (synchronized) lyrics for your music"
repository = "https://github.com/rtcq/syncedlyrics"
urls = { "Bug Tracker" = "https://github.com/rtcq/syncedlyrics/issues" }
authors = ["Momo <lo3me@proton.me>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.poetry.dependencies]
python = ">=3.8"
curl_cffi = "^0.6.2"
rapidfuzz = "^3.6.2"
beautifulsoup4 = "^4.12.3"

[tool.poetry.scripts]
syncedlyrics = "syncedlyrics.cli:cli_handler"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
